[package]
name = "multi_llm_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }

# Necesarios para leer streaming de líneas
tokio-util = "0.7"
futures-util = "0.3"






